2011-05-20  Tim Waugh  <twaugh@redhat.com>

	* src/rediff.c: Applied patch from Jiri Popelka to fix
	possible NULL pointer access.

	* src/diff.c: Applied patch from Jiri Popelka to fix incorrect
	use of sizeof for memory allocation.

	* src/diff.c, src/interdiff.c: Applied patch from Jiri Popelka
	to fix resource leaks.  Slight changes made my me.

2011-03-08  Tim Waugh  <twaugh@redhat.com>

	* tests/newline6/run-test: New test case for trac #13.
	* Makefile.am: Run it (currently fails).

2011-02-14  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (patlist_add_file): Avoid PATH_MAX (trac #11).

	* tests/rediff2/run-test: Portability fix (trac #18).

2011-02-10  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.2.

2011-02-10  Tim Waugh  <twaugh@redhat.com>

	* editdiff.in: Do not run rediff if no changes were made (trac
	#14).

	* doc/patchutils.xml: Updated grepdiff documentation to
	include all its options (trac #17).

	* src/interdiff.c (apply_patch): Don't put absolute filenames
	in the input to patch.

2011-01-04  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xopen_unzip): Use correct exit status for
	"lsdiff -z nonexistentfile" (trac #16).

2009-08-10  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xtmpfile): Clean up temporary file (trac #12).
	Also free the memory allocated to hold its name.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.1.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (main): Provide GNU-style long names for all
	options (trac #6).
	* src/interdiff.c (main): Likewise.
	* doc/patchutils.xml: Updated.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (do_unified): Cope a little better with
	incomplete @@ lines.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/rediff.c (adjust_offsets_and_copy): Keep the trailing text
	after @@ (trac #8).
	(removed_hunk): Likewise.

2009-01-21  Tim Waugh  <twaugh@redhat.com>
